<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:contentInsetLeft="0dp"
        android:elevation="5dp"
        app:contentInsetStart="0dp"
        android:background="@color/colorPrimary">

        <FrameLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@color/colorPrimary">

            <ImageView
                android:id="@+id/back_btn"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center_vertical|start"
                android:src="@drawable/ic_back"
                android:layout_marginStart="10dp"
                app:tint="@color/white" />

            <customfonts.TextViewSFProDisplayMedium
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/obj"
                android:gravity="center"
                android:textSize="20sp"
                android:textColor="@color/white"/>
        </FrameLayout>
    </androidx.appcompat.widget.Toolbar>

        <RelativeLayout
            android:id="@+id/rlrecycle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/toolbar"
            android:layout_above="@+id/llbottomnavi">
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="5dp"/>
        </RelativeLayout>
        <LinearLayout
            android:id="@+id/llbottomnavi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal">
        <androidx.cardview.widget.CardView
            android:id="@+id/rlfilter"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:elevation="10dp"
            android:visibility="visible"
            app:cardBackgroundColor="@color/colorPrimary">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="center">
        <LinearLayout
            android:id="@+id/llfilter"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center"
            android:paddingRight="25dp"
            android:paddingLeft="25dp">

            <ImageView
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_marginEnd="10dp"
                android:src="@drawable/ic_filter"
                app:tint="@color/white" />
            <customfonts.TextViewSFProDisplayMedium
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search"
                android:textSize="15sp"
                android:textColor="@color/white"/>

        </LinearLayout>
            <View
                android:id="@+id/view"
                android:layout_width="0.1dp"
                android:background="@color/white"
                android:layout_height="match_parent"/>
        <LinearLayout
            android:id="@+id/llsort"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center">

            <ImageView
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_marginEnd="10dp"
                android:src="@drawable/ic_sort"
                app:tint="@color/white" />
            <customfonts.TextViewSFProDisplayMedium
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sort"
                android:textSize="15sp"
                android:textColor="@color/white"/>
        </LinearLayout>
            </LinearLayout>

    </androidx.cardview.widget.CardView>

            <customfonts.Button_SF_Pro_Display_Medium
                android:id="@+id/addproperty"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="@string/add"
                android:textSize="12sp"
                android:visibility="gone"
                android:background="@color/colorPrimary" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/progress"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_alignParentBottom="true"/>


    <LinearLayout
        android:id="@+id/noresult"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/notfound"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nores"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline"
            android:textColor="@color/gray"
            android:textStyle="bold" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/notfound"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:gravity="center">

        <ImageView
            android:id="@+id/image"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:layout_centerInParent="true"
            android:src="@drawable/notfound"/>

        <customfonts.TextViewSFProDisplayMedium
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/image"
            android:text="@string/notfound"
            android:layout_centerInParent="true"
            android:textColor="@color/gray"
            android:textSize="20sp"/>
    </RelativeLayout>
    </RelativeLayout>
    <FrameLayout
        android:id="@+id/bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:layout_alignParentBottom="true"
        app:layout_behavior="@string/bottom_sheet_behavior" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>