<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:background="@color/transparentt"
    android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/white"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="10dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <customfonts.TextViewSFProDisplayMedium
                        android:id="@+id/name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/rate1"
                        android:textAppearance="@style/TextAppearance.AppCompat.Title"
                        android:textColor="@color/colorPrimary" />
                </LinearLayout>

                <ImageView
                    android:id="@+id/bt_close"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    app:srcCompat="@drawable/ic_cancel" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:background="@color/gray" />

            <customfonts.TextViewSFProDisplayRegular
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/thanks"
                android:gravity="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:textColor="@color/gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:gravity="center"
                android:orientation="vertical">

                <ratingview.RatingView
                    android:id="@+id/ratingView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    app:drawable_empty="@drawable/ic_starempty"
                    app:drawable_filled="@drawable/ic_star_filled"
                    app:drawable_half="@drawable/ic_star_half"
                    app:drawable_margin="2dp"
                    app:drawable_size="50dp"
                    app:is_indicator="false"
                    app:max_count="5"
                    android:layout_marginLeft="10dp"
                    android:layout_marginBottom="10dp"
                    />

            </LinearLayout>

            <customfonts.Button_SF_Pro_Display_Medium
                android:id="@+id/submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_round_1"
                android:text="@string/send"
                android:textColor="@android:color/white" />

        </LinearLayout>

</LinearLayout>